# proyecto_minero_4.0

./: .gitignore  AUDIT_REPORT.md  README.md  dashboard.py  predict_universal.py  pyproject.toml  requirements.txt  train_universal.py
config/: __init__.py  dataset_config.json  settings.py
core/: __init__.py  decision_engine.py  inference.py  inference_engine.py  pipeline.py  preprocessor.py  report_generator.py
core/adapters/: __init__.py  mining_csv_adapter.py  universal_adapter.py
core/models/: __init__.py  mining_gp_pro.py
core/validation/: __init__.py  schema.py  validator.py
models/: gradientboosting_rougher.output.recovery_20260115_201533.pkl
proyecto_minero.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_core.py  test_modeling.py  test_pipeline.py
tools/: __init__.py  diagnostico_datos.py  scan_schema.py
